# stencilpy

./: pyproject.toml
tests/: test_stencilpy.py
